[~] Remove deprecated whitelist_externals
Replace `whitelist_externals` with `allowlist_externals`

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ python =
     3.7: py37
 
 [testenv:lint]
-whitelist_externals =
+allowlist_externals =
     isort
     black
     flake8
@@ -30,7 +30,7 @@ commands =
     twine check dist/*
 
 [testenv]
-whitelist_externals = pytest
+allowlist_externals = pytest
 extras =
     test
 passenv = *
