[~] Add setuptools to requirements in CI

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox tox-gh-actions poetry
+          pip install tox tox-gh-actions poetry setuptools
 
       # declare package_version, repo_owner, repo_name, package_name so you may use it in web hooks.
       - name: Declare variables for convenient use
@@ -86,7 +86,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install poetry tox tox-gh-actions
+          pip install poetry setuptools tox tox-gh-actions
 
       - name: build documentation
         run: |
