--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
 fire = "0.4.0"
+libewf-python = "^20230212"
 
 black  = { version = "^22.3.0", optional = true}
 isort  = { version = "5.10.1", optional = true}
