--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ toml = {version = "^0.10.2", optional = true}
 livereload = {version = "^2.6.3", optional = true}
 pyreadline = {version = "^2.1", optional = true}
 mike = { version="^1.1.2", optional=true}
+pyreadpartitions = "^1.1.1"
 
 [tool.poetry.extras]
 test = [
