--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ pyreadline = {version = "^2.1", optional = true}
 mike = { version="^1.1.2", optional=true}
 pyreadpartitions = "^1.1.1"
 setuptools = {version = "^67.6.1", optional = true}
+libfsntfs-python = "^20221023"
 
 [tool.poetry.extras]
 test = [
