--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
 fire = "0.4.0"
-libewf-python = "^20230212"
 
 black  = { version = "^22.3.0", optional = true}
 isort  = { version = "5.10.1", optional = true}
@@ -51,7 +50,7 @@ pyreadline = {version = "^2.1", optional = true}
 mike = { version="^1.1.2", optional=true}
 pyreadpartitions = "^1.1.1"
 setuptools = {version = "^67.6.1", optional = true}
-libfsntfs-python = "^20221023"
+pyyaml = "^6.0"
 
 [tool.poetry.extras]
 test = [
