Finish dump of artefacts (next time we must add wildcard/regex support

--- a/theforensicator/artefacts/registry.yaml
+++ b/theforensicator/artefacts/registry.yaml
@@ -1,7 +1,9 @@
+dirname: REGISTRY
+files:
 - C:\Windows\System32\config\SYSTEM
-- C:\Windows\System32\config\SYSTEM.LOG*
+- C:\Windows\System32\config\SYSTEM.LOG
 - C:\Windows\System32\config\SAM
-- C:\Windows\System32\config\SAM.LOG*
+- C:\Windows\System32\config\SAM.LOG
 - C:\Windows\System32\config\SOFTWARE
-- C:\Windows\System32\config\SOFTWARE.LOG*
+- C:\Windows\System32\config\SOFTWARE.LOG
 - C:\Windows\System32\config\systemprofile\NTUSER.DAT
