--- a/theforensicator/artefacts/registry_system.yaml
+++ b/theforensicator/artefacts/registry_system.yaml
@@ -1,9 +1,9 @@
 dirname: REGISTRY_SYSTEM
 files:
-- C:\\Windows\\System32\\config\\SAM*
-- C:\\Windows\\System32\\config\\SYSTEM*
-- C:\\Windows\\System32\\config\\SOFTWARE*
-- C:\\Windows\\System32\\config\\SECURITY*
-- C:\\Windows\\System32\\config\\DEFAULT*
-- C:\\Windows\\System32\\config\\systemprofile\\NTUSER\.DAT*
-- C:\\Windows\\ServiceProfiles\\LocalService\\NTUSER\.DAT*
+- C:\\.+\\System32\\config\\SAM*
+- C:\\.+\\System32\\config\\SYSTEM*
+- C:\\.+\\System32\\config\\SOFTWARE*
+- C:\\.+\\System32\\config\\SECURITY*
+- C:\\.+\\System32\\config\\DEFAULT*
+- C:\\.+\\System32\\config\\systemprofile\\NTUSER\.DAT*
+- C:\\.+\\ServiceProfiles\\LocalService\\NTUSER\.DAT*
